force-app/main/default/objects/Activity/fields/Campaign_Name_Updated__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campaign Name Updated</label>
    <type>Checkbox</type>
</CustomField>