force-app/main/default/objects/Activity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zoom</fullName>
            </value>
            <value>
                <fullName>Hangout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>