force-app/main/default/objects/Activity/fields/Check_if_type_Contact_or_Lead__c.field-meta.xml
<CustomField>
    <fullName>Check_if_type_Contact_or_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check if type Contact or Lead</label>
    <type>Checkbox</type>
</CustomField>