force-app/main/default/objects/Activity/fields/Intent__c.field-meta.xml
<CustomField>
    <fullName>Intent__c</fullName>
    <label>Intent</label>
    <length>50</length>
    <type>Text</type>
</CustomField>