force-app/main/default/objects/Activity/fields/MeetingId__c.field-meta.xml
<CustomField>
    <fullName>MeetingId__c</fullName>
    <externalId>true</externalId>
    <label>MeetingId</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>