force-app/main/default/objects/Activity/fields/Recycle_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recycle_Reason__c</fullName>
    <label>Recycle Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Recycle_Reason</valueSetName>
    </valueSet>
</CustomField>