force-app/main/default/objects/Activity/fields/Sugar_ID__c.field-meta.xml
<CustomField>
    <fullName>Sugar_ID__c</fullName>
    <externalId>true</externalId>
    <label>Sugar ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>