force-app/main/default/objects/Activity/fields/Sugar_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Sugar_To_Address__c</fullName>
    <label>Sugar - To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>