force-app/main/default/objects/Activity/fields/Sugar_Type__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Type__c</fullName>
    <label>Sugar - Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>